objects/Recap_Product__c.object
<CustomObject>
    <fields>
        <fullName>Layout__c</fullName>
        <inlineHelpText>Required for Recap to reach a status of &quot;Recap Complete&quot;</inlineHelpText>
        <label>Layout</label>
        <picklist>
            <controllingField>Design__c</controllingField>
            <picklistValues>
                <fullName>Home Page 01 Wide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Page 02 Wide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Page 03 Wide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Page 04 Wide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Page 05 Wide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Page 06 Wide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Page 07 Wide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Page 08 B Wide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Page 09B Wide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Page 10B Wide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Page 11B Flash Wide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Page 11B Wide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Page 12B Wide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Page 13B Wide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Page 14B Wide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Page 15 Wide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Page 16 Wide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Page 17 Wide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Page 18 Wide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Page 19 Wide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Page 20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Page 20 Wide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Page 21 Wide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Page 22 Wide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Page 23 Wide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Page 24 Wide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Page 25 Wide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Page 26 Wide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Page 27 Wide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Page 28 Wide</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Routing1_Forms__c</fullName>
        <label>Lead Routing 1 Forms</label>
        <picklist>
            <picklistValues>
                <fullName>All Forms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quick Quote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Qualify</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Vehicle Info Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Owned Vehicle Info Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Privacy Policy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promotion Builder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Survey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Find It For Me</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Lead_Routing2_Forms__c</fullName>
        <label>Lead Routing 2 Forms</label>
        <picklist>
            <picklistValues>
                <fullName>All Forms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quick Quote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Qualify</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Vehicle Info Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Owned Vehicle Info Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Privacy Policy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promotion Builder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Survey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Find It For Me</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Lead_Routing3_Forms__c</fullName>
        <label>Lead Routing 3 Forms</label>
        <picklist>
            <picklistValues>
                <fullName>All Forms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quick Quote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Qualify</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Vehicle Info Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Owned Vehicle Info Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Privacy Policy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promotion Builder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Survey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Find It For Me</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Lead_Routing_Address1__c</fullName>
        <inlineHelpText>Required for Recap to reach a status of &quot;Recap Complete&quot;</inlineHelpText>
        <label>Lead Routing Address 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Lead_Routing_Address2__c</fullName>
        <label>Lead Routing Address 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Lead_Routing_Address3__c</fullName>
        <label>Lead Routing Address 3</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Lead_Routing_Type1__c</fullName>
        <label>Lead Routing Type 1</label>
        <picklist>
            <picklistValues>
                <fullName>Text</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FAX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADF 1.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XADF</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Routing_Type2__c</fullName>
        <label>Lead Routing Type 2</label>
        <picklist>
            <picklistValues>
                <fullName>Text</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FAX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADF 1.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XADF</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Routing_Type3__c</fullName>
        <label>Lead Routing Type 3</label>
        <picklist>
            <picklistValues>
                <fullName>Text</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FAX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADF 1.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XADF</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Logos__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Logos</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Major_Cities__c</fullName>
        <inlineHelpText>Required for Recap to reach a status of &quot;Recap Complete&quot;</inlineHelpText>
        <label>Major Cities</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Masthead__c</fullName>
        <inlineHelpText>Required for Recap to reach a status of &quot;Recap Complete&quot;</inlineHelpText>
        <label>Masthead</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Minor_Cities__c</fullName>
        <label>Minor Cities</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Mock_Up_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Required for Recap to reach a status of &quot;Recap Complete&quot;</inlineHelpText>
        <label>Mock Up Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Model_Feature_Highlights__c</fullName>
        <inlineHelpText>Are there any model specific features or highlights the LMA would like to focus on?</inlineHelpText>
        <label>Model Feature/Highlights</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_Focus__c</fullName>
        <label>Model Focus</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_Year_Trim1__c</fullName>
        <label>Model/Year/Trim1(Required)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_Year_Trim2__c</fullName>
        <label>Model/Year/Trim 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_Year_Trim3__c</fullName>
        <label>Model/Year/Trim 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Modem__c</fullName>
        <label>Modem #</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Monthly_Budget_Amount__c</fullName>
        <label>Monthly Budget Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Car_Count__c</fullName>
        <label>New Car Count</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OEM__c</fullName>
        <inlineHelpText>Required for Recap to reach a status of &quot;Recap Complete&quot;</inlineHelpText>
        <label>OEM</label>
        <picklist>
            <picklistValues>
                <fullName>BMW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Holden</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Honda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyundai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infiniti</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lexus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mazda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MINI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mitsubishi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nissan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Endorsed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Toyota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VW</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Offer_Type__c</fullName>
        <label>Offer Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Submitter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Submitter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Recap_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parts_Type__c</fullName>
        <label>Parts - Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parts__c</fullName>
        <inlineHelpText>Required for Recap to reach a status of &quot;Recap Complete&quot;</inlineHelpText>
        <label>Parts</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_Primary_Contact_Details__c</fullName>
        <formula>IF(NOT(ISBLANK(Product_Primary_Contact__r.Email)), Product_Primary_Contact__r.Email &amp; BR(), &quot;&quot;) &amp;  IF(NOT(ISBLANK(Product_Primary_Contact__r.Phone)), Product_Primary_Contact__r.Phone &amp; &quot; (Phone)&quot; &amp; BR(), &quot;&quot;)  &amp; IF(NOT(ISBLANK( Product_Primary_Contact__r.MobilePhone)),  Product_Primary_Contact__r.MobilePhone &amp; &quot; (Mobile)&quot;, &quot;&quot;)</formula>
        <inlineHelpText>Contact &quot;Phone&quot; required for Recap to reach a status of &quot;Recap Complete&quot;</inlineHelpText>
        <label>Product Primary Contact Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Required for Recap to reach a status of &quot;Recap Complete&quot;</inlineHelpText>
        <label>Product Primary Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Recap_Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Recap Products (Product Primary Contact - DAP)</relationshipLabel>
        <relationshipName>Recap_Products1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proforma_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Proforma Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Proforma_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Proforma Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Proforma_Presented__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Proforma Presented</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Provider__c</fullName>
        <label>Provider</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RFP_Received__c</fullName>
        <label>RFP Received</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Recap_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recap Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Recap Products</relationshipLabel>
        <relationshipName>Recap_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recap_WebID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recap WebID</label>
        <referenceTo>Recap_WebID__c</referenceTo>
        <relationshipLabel>Recap Products</relationshipLabel>
        <relationshipName>Recap_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recap__c</fullName>
        <label>Recap</label>
        <referenceTo>Recap__c</referenceTo>
        <relationshipLabel>Recap Products</relationshipLabel>
        <relationshipName>Recap_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Recap_in_LMA_Strategists_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Recap_Products2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reference_Site_URL_1__c</fullName>
        <label>Reference Site URL 1</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Reference_Site_URL_2__c</fullName>
        <label>Reference Site URL 2</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Reference_Site_URL_3__c</fullName>
        <label>Reference Site URL 3</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central North</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Division</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hoffman Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent Truck Dealers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NIADA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northcentral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northeast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northwest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PFW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southcentral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southeast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Truck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Regional_Incentive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Regional Incentive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ring_To_1_Label__c</fullName>
        <inlineHelpText>Required for Recap to reach a status of &quot;Recap Complete&quot;</inlineHelpText>
        <label>Ring To 1 Label</label>
        <picklist>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Body Shop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internet Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Used</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ring_To_1_Type__c</fullName>
        <inlineHelpText>Required for Recap to reach a status of &quot;Recap Complete&quot;</inlineHelpText>
        <label>Ring To 1 Type</label>
        <picklist>
            <picklistValues>
                <fullName>Local</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Toll Free</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ring_To_2_Label__c</fullName>
        <label>Ring To 2 Label</label>
        <picklist>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Body Shop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internet Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Used</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ring_To_2_Type__c</fullName>
        <label>Ring To 2 Type</label>
        <picklist>
            <picklistValues>
                <fullName>Local</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Toll Free</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ring_To_3_Label__c</fullName>
        <label>Ring To 3 Label</label>
        <picklist>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Body Shop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internet Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Used</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ring_To_3_Type__c</fullName>
        <label>Ring To 3 Type</label>
        <picklist>
            <picklistValues>
                <fullName>Local</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Toll Free</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ring_To_Number_1__c</fullName>
        <inlineHelpText>Required for Recap to reach a status of &quot;Recap Complete&quot;</inlineHelpText>
        <label>Ring To Number 1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Ring_To_Number_2__c</fullName>
        <label>Ring To Number 2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Ring_To_Number_3__c</fullName>
        <label>Ring To Number 3</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Row_1__c</fullName>
        <inlineHelpText>Required for Recap to reach a status of &quot;Recap Complete&quot;</inlineHelpText>
        <label>Row 1 (Design &amp;/or Functionality)</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Row_2__c</fullName>
        <inlineHelpText>Required for Recap to reach a status of &quot;Recap Complete&quot;</inlineHelpText>
        <label>Row 2</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Row_3__c</fullName>
        <inlineHelpText>Required for Recap to reach a status of &quot;Recap Complete&quot;</inlineHelpText>
        <label>Row 3</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Sales_Manager_Contact_Details__c</fullName>
        <formula>IF(NOT(ISBLANK( Sales_Manager_Contact_Name__r.Email )), Sales_Manager_Contact_Name__r.Email &amp; BR(), &quot;&quot;) &amp; IF(NOT(ISBLANK(Sales_Manager_Contact_Name__r.Phone)), Sales_Manager_Contact_Name__r.Phone &amp; &quot; (Phone)&quot; &amp; BR(), &quot;&quot;) &amp; IF(NOT(ISBLANK( Sales_Manager_Contact_Name__r.MobilePhone)), Sales_Manager_Contact_Name__r.MobilePhone &amp; &quot; (Mobile)&quot;, &quot;&quot;)</formula>
        <label>Sales Manager Contact Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Manager_Contact_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Manager Contact Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Recap_Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Recap Products (Sales Manager Contact Name)</relationshipLabel>
        <relationshipName>Recap_ProductsugXb</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Reply_Email__c</fullName>
        <label>Sales Reply Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Sales__c</fullName>
        <inlineHelpText>Required for Recap to reach a status of &quot;Recap Complete&quot;</inlineHelpText>
        <label>Sales</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Search_Products__c</fullName>
        <label>Search Products</label>
        <picklist>
            <picklistValues>
                <fullName>PowerBrand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PowerSearch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Search Essentials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Website</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Secondary_Domains__c</fullName>
        <inlineHelpText>Required for Recap to reach a status of &quot;Recap Complete&quot;</inlineHelpText>
        <label>Secondary Domains</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Service_Manager_Contact_Details__c</fullName>
        <formula>IF(NOT(ISBLANK( Service_Manager_Contact_Name__r.Email )), Service_Manager_Contact_Name__r.Email &amp; BR(), &quot;&quot;) &amp; IF(NOT(ISBLANK(Service_Manager_Contact_Name__r.Phone)), Service_Manager_Contact_Name__r.Phone &amp; &quot; (Phone)&quot; &amp; BR(), &quot;&quot;) &amp; IF(NOT(ISBLANK( Service_Manager_Contact_Name__r.MobilePhone)), Service_Manager_Contact_Name__r.MobilePhone &amp; &quot; (Mobile)&quot;, &quot;&quot;)</formula>
        <label>Service Manager Contact Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Manager_Contact_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Manager Contact Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Recap_Account__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Recap Products (Service Manager Contact Name)</relationshipLabel>
        <relationshipName>Recap_ProductsugXq</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Reply_Email__c</fullName>
        <label>Service Reply Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Service_Type__c</fullName>
        <label>Service - Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service__c</fullName>
        <inlineHelpText>Required for Recap to reach a status of &quot;Recap Complete&quot;</inlineHelpText>
        <label>Service</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Special_Instructions_Ad__c</fullName>
        <label>Special Instructions - Ad</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Special_Instructions__c</fullName>
        <label>Special Instructions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Stock_Number__c</fullName>
        <label>Stock Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Store__c</fullName>
        <label>Store #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Strategy__c</fullName>
        <label>Strategy</label>
        <picklist>
            <picklistValues>
                <fullName>Conquest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retention</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tagline__c</fullName>
        <inlineHelpText>Required for Recap to reach a status of &quot;Recap Complete&quot;</inlineHelpText>
        <label>Tagline</label>
        <length>35</length>
        <type>Text</type>
    </fields>
</CustomObject>